third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/assign_local_combo_invalid.old.exp

Diagnostics:
error: cannot assign to borrowed local `s`
   ┌─ tests/reference-safety/v1-tests/assign_local_combo_invalid.move:14:9
   │
13 │         if (cond) f = &s.f else f = &s.g;
   │                       ----          ----
   │                       ││            ││
   │                       ││            │previous local borrow
   │                       ││            used by field borrow
   │                       │previous local borrow
   │                       used by field borrow
14 │         s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^ attempted to assign here
15 │         *f;
   │         -- conflicting reference `f` used here

error: cannot assign to borrowed local `s`
   ┌─ tests/reference-safety/v1-tests/assign_local_combo_invalid.move:23:9
   │
22 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       --------
   │                       │    │
   │                       │    previous mutable local borrow
   │                       used by mutable field borrow
23 │         s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^ attempted to assign here
24 │         *f;
   │         -- conflicting reference `f` used here

error: cannot assign to borrowed local `s`
   ┌─ tests/reference-safety/v1-tests/assign_local_combo_invalid.move:32:9
   │
31 │         if (cond) f = &mut s else f = other;
   │                       ------ previous mutable local borrow
32 │         s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^ attempted to assign here
33 │         *f;
   │         -- conflicting reference `f` used here

error: cannot assign to borrowed local `s`
   ┌─ tests/reference-safety/v1-tests/assign_local_combo_invalid.move:41:9
   │
40 │         if (cond) f = id_mut(&mut s) else f = other;
   │                       --------------
   │                       │      │
   │                       │      previous mutable local borrow
   │                       used by mutable call result
41 │         s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^ attempted to assign here
42 │         *f;
   │         -- conflicting reference `f` used here

error: cannot assign to borrowed local `s`
   ┌─ tests/reference-safety/v1-tests/assign_local_combo_invalid.move:49:19
   │
48 │         let f = &s.f;
   │                 ----
   │                 ││
   │                 │previous local borrow
   │                 used by field borrow
49 │         if (cond) s = S { f: 0, g: 0 };
   │                   ^^^^^^^^^^^^^^^^^^^^ attempted to assign here
50 │         *f;
   │         -- conflicting reference `f` used here
